[gd_scene load_steps=2 format=3 uid="uid://dl3iq4lf6pmjy"]

[ext_resource type="Script" uid="uid://83slljt0ipk2" path="res://scripts/NeuralNetwork/neuron_label.gd" id="2_1wr1w"]

[node name="NeuronLabel" type="PanelContainer"]
custom_minimum_size = Vector2(220, 0)
anchors_preset = -1
offset_right = 220.0
offset_bottom = 79.0
size_flags_vertical = 4
focus_mode = 2
theme_type_variation = &"NeuronLabel"
script = ExtResource("2_1wr1w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 2

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2

[node name="LabelType" type="RichTextLabel" parent="MarginContainer/BoxContainer/BoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 20
text = "Sigmoid"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelActivation" type="RichTextLabel" parent="MarginContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
focus_mode = 0
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "0.00"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="LabelBias" type="RichTextLabel" parent="MarginContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
focus_mode = 0
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0.53468347, 0.82160074, 1)
text = "0.00"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="LabelDelta" type="RichTextLabel" parent="MarginContainer/BoxContainer/BoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
mouse_filter = 1
theme_override_colors/default_color = Color(0.7672594, 0.38695118, 0, 1)
bbcode_enabled = true
text = "0.00"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
